--- a/about.html
+++ b/about.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
-    
+    <!-- Header Section -->
+   <section class="nav-bar">
+    <header class="header-content">
+        <div class="logo">
+            <img src="assets/images/logo.png" alt="logo">
+        </div>
+        <div class="nav-items">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Projects</li>
+                <li>Donate</li>
+            </ul>
+        </div>
+    </header>
+   </section>
 </body>
 </html>
