added new  repo with items

--- a/about.html
+++ b/about.html
@@ -48,53 +48,56 @@
 </div>
 </section>
 
-<section class="main-4">
-<div class="content">
-<h1>Our Purpose</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo neque nulla facere praesentium temporibus at architecto possimus consectetur deleniti eos, minima odit sequi quasi modi vitae aut quas aliquam libero repellendus itaque unde laborum dolore. Eveniet repellendus, ad amet temporibus unde facere itaque obcaecati dignissimos provident sit quod ea est a. Eaque saepe voluptatibus quibusdam fuga molestiae commodi recusandae natus maxime, ipsam impedit? Hic sapiente, ea, modi ullam quidem quo dolorum quod, impedit molestias repellat quia a deserunt culpa voluptates non enim. Dignissimos reiciendis voluptatum quaerat consequatur facere consequuntur aut, quisquam, ipsa perspiciatis numquam omnis asperiores! Quaerat inventore perferendis blanditiis? Sint porro quia facere similique laudantium ut? Tempora pariatur debitis ipsum rem, distinctio praesentium a officiis quod illo voluptate minus delectus, beatae quis doloremque quae dolorem. Ullam possimus dolores expedita aut, at sequi quidem nulla modi unde id necessitatibus delectus deleniti, similique magni tenetur nemo sapiente reprehenderit provident impedit! Voluptatibus?</p>
-</div>
-<img src="assets/images/leaf.jpeg" alt="">
-</section>
+        <section class="main-4">
+        <div class="content">
+        <h1>Our Purpose</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo neque nulla facere praesentium temporibus at architecto possimus consectetur deleniti eos, minima odit sequi quasi modi vitae aut quas aliquam libero repellendus itaque unde laborum dolore. Eveniet repellendus, ad amet temporibus unde facere itaque obcaecati dignissimos provident sit quod ea est a. Eaque saepe voluptatibus quibusdam fuga molestiae commodi recusandae natus maxime, ipsam impedit? Hic sapiente, ea, modi ullam quidem quo dolorum quod, impedit molestias repellat quia a deserunt culpa voluptates non enim. Dignissimos reiciendis voluptatum quaerat consequatur facere consequuntur aut, quisquam, ipsa perspiciatis numquam omnis asperiores! Quaerat inventore perferendis blanditiis? Sint porro quia facere similique laudantium ut? Tempora pariatur debitis ipsum rem, distinctio praesentium a officiis quod illo voluptate minus delectus, beatae quis doloremque quae dolorem. Ullam possimus dolores expedita aut, at sequi quidem nulla modi unde id necessitatibus delectus deleniti, similique magni tenetur nemo sapiente reprehenderit provident impedit! Voluptatibus?</p>
+        </div>
+        <img src="assets/images/leaf.jpeg" alt="">
+        </section>
 
-<section class="team">
-<div class="cards">
-<!-- item 1 -->
-<div class="items">
-<img src="assets/images/lady.png" alt="">
-<h1>Grace Muthoni</h1>
-<p>Founder &amp;CEO , Cloud practitioner,Data Scientist</p>
-</div>
-<!-- item 1 -->
-<div class="items">
-<img src="assets/images/man.jpeg" alt="">
-<h1>Mulati Brian</h1>
-<p>Co-Founder Full stack developer,Cloud practitioner,Data analyst</p>
-</div>
-<!-- item 1 -->
-<div class="items">
-<img src="assets/images/man.jpeg" alt="">
-<h1>Vicent</h1>
-<p>Mathematician,Statician</p>
-</div>
-<!-- item 1 -->
-<div class="items">
-<img src="assets/images/man.jpeg" alt="">
-<h1>Tom Lee</h1>
-<p>IOT engineer,Cloud practitioner , Data analyst</p>
-</div>
-<!-- item 1 -->
-<div class="items">
-<img src="assets/images/man.jpeg" alt="">
-<h1>Micheal</h1>
-<p>Mathematician , Statician</p>
-</div>
-<!-- item 1 -->
-<div class="items">
-<img src="assets/images/planet-earth-falling-into-clear-water-free-png.png" alt="">
+        <section class="team">
+        <div class="cards">
+        <div class="head">
+            <h1>Meet Our Team: Visionaries Driving Change</h1>
+        </div>
+        <!-- item 1 -->
+        <div class="items">
+        <img src="assets/images/lady.png" alt="">
+        <h1>Grace Muthoni</h1>
+        <p>Founder &amp;CEO , Cloud practitioner,Data Scientist</p>
+        </div>
+        <!-- item 1 -->
+        <div class="items">
+        <img src="assets/images/man.jpeg" alt="">
+        <h1>Mulati Brian</h1>
+        <p>Co-Founder Full stack developer,Cloud practitioner,Data analyst</p>
+        </div>
+        <!-- item 1 -->
+        <div class="items">
+        <img src="assets/images/man.jpeg" alt="">
+        <h1>Vicent</h1>
+        <p>Mathematician,Statician</p>
+        </div>
+        <!-- item 1 -->
+        <div class="items">
+        <img src="assets/images/man.jpeg" alt="">
+        <h1>Tom Lee</h1>
+        <p>IOT engineer,Cloud practitioner , Data analyst</p>
+        </div>
+        <!-- item 1 -->
+        <div class="items">
+        <img src="assets/images/man.jpeg" alt="">
+        <h1>Micheal</h1>
+        <p>Mathematician , Statician</p>
+        </div>
+        <!-- item 1 -->
+        <div class="items">
+        <img src="assets/images/planet-earth-falling-into-clear-water-free-png.png" alt="">
 
-</div>
-</div>
-</section>
+        </div>
+        </div>
+        </section>
 </main>
 
 
