--- a/about.html
+++ b/about.html
@@ -6,24 +6,25 @@
 <title>About Maji Yetu Foundation</title>
 <link rel="stylesheet" href="assets/css/about.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 <section class="container">
 <!-- Header Section -->
-<section class="nav-bar">
-<header class="header-content">
-<div class="logo">
-<img src="assets/images/logo.png" alt="logo">
-</div>
-<div class="nav-items">
-<h1>Home</h1>
-<h1>About</h1>
-<h1>Projects</h1>
-<h1>Donate</h1>
-</div>
+        <section class="nav-bar">
+            <header class="header-content">
+                <div class="logo">
+                    <img src="assets/images/logo.png" alt="logo">
+                </div>
+                <div class="nav-items">
+                    <h1>Home</h1>
+                    <h1>About</h1>
+                    <h1>Projects</h1>
+                    <h1>Donate</h1>
+                </div>
 
-</header>
-</section>
+            </header>
+        </section>
 </section>
 
 
@@ -35,7 +36,11 @@
 
 
 <section class="main-2">
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt asperiores quam esse rerum sit dolore molestiae commodi ratione! Voluptate nostrum ratione ducimus error. Optio vero sed obcaecati sint. Commodi, tempore consectetur reiciendis optio corporis sint vel doloribus rem ipsum et at nobis veniam sunt omnis molestias ipsa soluta aspernatur, eveniet odit error. Repudiandae sequi cupiditate tempora voluptate aliquam quasi incidunt pariatur maxime, ratione voluptatibus illum saepe minima nulla perferendis ab vel tenetur, similique, minus dolorem soluta aliquid animi vitae necessitatibus. Hic natus, fugiat architecto, soluta alias vitae non dicta tempore voluptatem debitis ipsam. Minus necessitatibus dignissimos officiis ea quo dolorum atque et possimus soluta vitae nulla sit reprehenderit, dolore ullam rerum rem dolor praesentium! Dolores, blanditiis. Cumque voluptatum deleniti maiores incidunt? Hic corrupti pariatur dolorem? Magnam cum enim quasi voluptate reprehenderit natus vitae totam cupiditate nihil ratione aspernatur accusantium ipsa animi, sint maiores doloremque ipsum saepe possimus, dolorum quis harum unde similique voluptates sit. Vel optio fugit doloremque voluptatem molestiae eos dolorum ea mollitia dignissimos laudantium cumque, aliquam ab porro numquam nostrum libero dolor saepe est ex rem a! Libero excepturi praesentium quaerat modi doloribus itaque totam sunt eos tempora quia commodi vel, recusandae dolores. Sint amet delectus quia minima.</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt asperiores quam esse rerum sit dolore molestiae commodi ratione! Voluptate nostrum ratione ducimus error. Optio vero sed obcaecati sint. Commodi, 
+    tempore consectetur reiciendis optio corporis sint vel doloribus rem ipsum et at nobis veniam sunt omnis molestias ipsa soluta 
+    aspernatur, eveniet odit error.
+     Libero excepturi praesentium quaerat modi doloribus itaque 
+     totam sunt eos tempora quia commodi vel, recusandae dolores. Sint amet delectus quia minima.</p>
 <img src="assets/images/water-splash-with-earth-planet-free-png.png" alt="Water">
 </section>
 
@@ -49,73 +54,73 @@
 </section>
 
         <section class="main-4">
-        <div class="content">
-        <h1>Our Purpose</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo neque nulla facere praesentium temporibus at architecto possimus consectetur deleniti eos, minima odit sequi quasi modi vitae aut quas aliquam libero repellendus itaque unde laborum dolore. Eveniet repellendus, ad amet temporibus unde facere itaque obcaecati dignissimos provident sit quod ea est a. Eaque saepe voluptatibus quibusdam fuga molestiae commodi recusandae natus maxime, ipsam impedit? Hic sapiente, ea, modi ullam quidem quo dolorum quod, impedit molestias repellat quia a deserunt culpa voluptates non enim. Dignissimos reiciendis voluptatum quaerat consequatur facere consequuntur aut, quisquam, ipsa perspiciatis numquam omnis asperiores! Quaerat inventore perferendis blanditiis? Sint porro quia facere similique laudantium ut? Tempora pariatur debitis ipsum rem, distinctio praesentium a officiis quod illo voluptate minus delectus, beatae quis doloremque quae dolorem. Ullam possimus dolores expedita aut, at sequi quidem nulla modi unde id necessitatibus delectus deleniti, similique magni tenetur nemo sapiente reprehenderit provident impedit! Voluptatibus?</p>
-        </div>
-        <img src="assets/images/leaf.jpeg" alt="">
+            <div class="content">
+                <h1>Our Purpose</h1>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo neque nulla facere praesentium temporibus at architecto possimus consectetur deleniti eos, minima odit sequi quasi modi vitae aut quas aliquam libero repellendus itaque unde laborum dolore. Eveniet repellendus, ad amet temporibus unde facere itaque obcaecati dignissimos provident sit quod ea est a. Eaque saepe voluptatibus quibusdam fuga molestiae commodi recusandae natus maxime, ipsam impedit? Hic sapiente, ea, modi ullam quidem quo dolorum quod, impedit molestias repellat quia a deserunt culpa voluptates non enim. Dignissimos reiciendis voluptatum quaerat consequatur facere consequuntur aut, quisquam, ipsa perspiciatis numquam omnis asperiores! Quaerat inventore perferendis blanditiis? Sint porro quia facere similique laudantium ut? Tempora pariatur debitis ipsum rem, distinctio praesentium a officiis quod illo voluptate minus delectus, beatae quis doloremque quae dolorem. Ullam possimus dolores expedita aut, at sequi quidem nulla modi unde id necessitatibus delectus deleniti, similique magni tenetur nemo sapiente reprehenderit provident impedit! Voluptatibus?</p>
+             </div>
+             <img src="assets/images/leaf.jpeg" alt="">
         </section>
 
-        <section class="team">
+    <section class="team">
         <div class="cards">
-        <div class="head">
+            <div class="head">
             <h1>Meet Our Team: Visionaries Driving Change</h1>
         </div>
         <!-- item 1 -->
         <div class="items">
-        <img src="assets/images/lady.png" alt="">
-        <h1>Grace Muthoni</h1>
-        <p>Founder &amp;CEO , Cloud practitioner,Data Scientist</p>
+            <img src="assets/images/lady.png" alt="">
+            <h1>Grace Muthoni</h1>
+            <p>Founder &amp;CEO , Cloud practitioner,Data Scientist</p>
         </div>
         <!-- item 1 -->
         <div class="items">
-        <img src="assets/images/man.jpeg" alt="">
-        <h1>Mulati Brian</h1>
-        <p>Co-Founder Full stack developer,Cloud practitioner,Data analyst</p>
+            <img src="assets/images/man.jpeg" alt="">
+            <h1>Mulati Brian</h1>
+            <p>Co-Founder Full stack developer,Cloud practitioner,Data analyst</p>
         </div>
         <!-- item 1 -->
         <div class="items">
-        <img src="assets/images/man.jpeg" alt="">
-        <h1>Vicent</h1>
-        <p>Mathematician,Statician</p>
+            <img src="assets/images/man.jpeg" alt="">
+            <h1>Vicent</h1>
+            <p>Mathematician,Statician</p>
         </div>
         <!-- item 1 -->
         <div class="items">
-        <img src="assets/images/man.jpeg" alt="">
-        <h1>Tom Lee</h1>
-        <p>IOT engineer,Cloud practitioner , Data analyst</p>
+            <img src="assets/images/man.jpeg" alt="">
+            <h1>Tom Lee</h1>
+            <p>IOT engineer,Cloud practitioner , Data analyst</p>
         </div>
         <!-- item 1 -->
         <div class="items">
-        <img src="assets/images/man.jpeg" alt="">
-        <h1>Micheal</h1>
-        <p>Mathematician , Statician</p>
+            <img src="assets/images/man.jpeg" alt="">
+            <h1>Micheal</h1>
+            <p>Mathematician , Statician</p>
         </div>
         <!-- item 1 -->
         <div class="items">
-        <img src="assets/images/planet-earth-falling-into-clear-water-free-png.png" alt="">
+            <img src="assets/images/planet-earth-falling-into-clear-water-free-png.png" alt="">
 
         </div>
         </div>
-        </section>
+    </section>
 </main>
 
 
 <!-- FOOTER SECTION -->
 <hr>
 <section class="footer">
-<footer class="content">
-<ul class="content">
-<li> Email email@majiyetu.co.ke</li>
-<li>Facebook Majiyetuofficial</li>
-<li>X majiyetu_official</li>
-<li>Instagram Majiyetuofficial</li>
-</ul>
+        <footer class="content">
+            <ul class="content">
+                <li><i class="fas fa-envelope"></i> Email: email@majiyetu.co.ke</li>
+                <li><i class="fab fa-facebook"></i> Facebook : Majiyetuofficial</li>
+                <li><i class="fas fa-at"></i> X: majiyetu_official</li>
+                <li><i class="fab fa-instagram"></i> Instagram Majiyetuofficial</li>
+            </ul>
 
-<div class="image-footer">
-<img src="assets/images/global-warming.png" alt="">
-</div>
-</footer>
+                <div class="image-footer">
+                    <img src="assets/images/global-warming.png" alt="">
+                </div>
+        </footer>
 </section>
 
 </body>
