added new  repo with items

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
+
+
 <section class="container">
 <!-- Header Section -->
         <section class="nav-bar">
@@ -17,10 +19,10 @@
                     <img src="assets/images/logo.png" alt="logo">
                 </div>
                 <div class="nav-items">
-                    <h1>Home</h1>
-                    <h1>About</h1>
-                    <h1>Projects</h1>
-                    <h1>Donate</h1>
+                    <h2>Home</h2>
+                    <h2>About</h2>
+                    <h2>Projects</h2>
+                    <h2>Donate</h2>
                 </div>
 
             </header>
@@ -49,7 +51,10 @@
 <div class="content">
 <h1>Our Vision</h1>
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro eum unde eos, ex maxime laboriosam exercitationem ad corporis quaerat nisi iste excepturi, mollitia hic! Repellendus aliquid, aliquam, pariatur quas cum sit aut rerum atque ipsa placeat alias, distinctio saepe nobis! Nisi commodi tempore perferendis vero, atque aliquid dolorem! Libero possimus, ipsum, officiis quidem suscipit a reiciendis tempora animi dicta temporibus sunt sapiente recusandae aliquid minima, totam corrupti consectetur debitis quaerat soluta illum repudiandae repellendus architecto? Cum temporibus amet modi rerum? Pariatur eos quam tempore sunt voluptatibus quisquam dolor exercitationem error? Dolore aperiam ducimus possimus excepturi aspernatur iure, autem quas consequuntur exercitationem, recusandae, ut nam sit tempore aut iste. Sunt nesciunt maxime unde dolor mollitia ipsa fugit nam molestiae eaque recusandae veritatis, illo, minus laboriosam libero sit dolorem excepturi autem iure vel? Odit consectetur nemo quo omnis, hic ex voluptate labore fugiat quis? Aut mollitia molestiae, perspiciatis numquam totam cum natus.</p>
+<p> officiis quidem suscipit a reiciendis tempora animi dicta temporibus sunt sapiente recusandae aliquid minima, totam corrupti consectetur debitis quaerat soluta illum repudiandae repellendus architecto?
+     Cum temporibus amet modi rerum? Pariatur eos quam tempore sunt voluptatibus quisquam dolor
+      exercitationem error? Dolore aperiam ducimus possimus excepturi aspernatur iure, 
+      , hic ex voluptate labore fugiat quis? Aut mollitia molestiae, perspiciatis numquam totam cum natus.</p>
 </div>
 </section>
 
