added new  repo with items

--- a/about.html
+++ b/about.html
@@ -75,13 +75,13 @@
         <div class="items">
             <img src="assets/images/lady.png" alt="">
             <h1>Grace Muthoni</h1>
-            <p>Founder &amp;CEO , Cloud practitioner,Data Scientist</p>
+            <p>Founder &amp;CEO , Cloud practitioner, <br>Data Scientist</p>
         </div>
         <!-- item 1 -->
         <div class="items">
             <img src="assets/images/man.jpeg" alt="">
             <h1>Mulati Brian</h1>
-            <p>Co-Founder Full stack developer,Cloud practitioner,Data analyst</p>
+            <p>Co-Founder Full stack developer,Cloud  <br>practitioner,Data analyst</p>
         </div>
         <!-- item 1 -->
         <div class="items">
@@ -93,7 +93,7 @@
         <div class="items">
             <img src="assets/images/man.jpeg" alt="">
             <h1>Tom Lee</h1>
-            <p>IOT engineer,Cloud practitioner , Data analyst</p>
+            <p>IOT engineer,Cloud practitioner , Data <br> analyst</p>
         </div>
         <!-- item 1 -->
         <div class="items">
