--- a/about.html
+++ b/about.html
@@ -20,18 +20,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
+               <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item pr-3">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                    <li class="nav-item pr-3">
+                        <a class="nav-link active" href="#">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                    <li class="nav-item pr-3">
+                        <a class="nav-link active" href="#">Projects</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Donate</a>
+                    <li class="nav-item pr-3">
+                        <a class="nav-link active" href="#">Donate</a>
                     </li>
                 </ul>
             </div>
