added new  repo with items

--- a/about.html
+++ b/about.html
@@ -84,32 +84,42 @@
                 <!-- item 1 -->
                 <div class="items">
                     <img src="assets/images/lady.png" alt="">
-                    <h1>Grace Muthoni</h1>
+                    <div class="content-team">
+                    <h2>Grace Muthoni</h2>
                     <p>Founder &amp;CEO , Cloud practitioner, <br>Data Scientist</p>
+                    </div>
                 </div>
                 <!-- item 1 -->
                 <div class="items">
                     <img src="assets/images/man.jpeg" alt="">
-                    <h1>Mulati Brian</h1>
+                    <div class="content-team">
+                    <h2>Mulati Brian</h2>
                     <p>Co-Founder Full stack developer,Cloud  <br>practitioner,Data analyst</p>
+                    </div>
                 </div>
                 <!-- item 1 -->
                 <div class="items">
                     <img src="assets/images/man.jpeg" alt="">
-                    <h1>Vicent</h1>
+                    <div class="content-team">
+                    <h2>Vicent</h2>
                     <p>Mathematician,Statician</p>
+                    </div>
                 </div>
                 <!-- item 1 -->
                 <div class="items">
                     <img src="assets/images/man.jpeg" alt="">
-                    <h1>Tom Lee</h1>
+                    <div class="content-team">
+                        <h2>Tom Lee</h2>
                     <p>IOT engineer,Cloud practitioner , Data <br> analyst</p>
+                    </div>
                 </div>
                 <!-- item 1 -->
                 <div class="items">
                     <img src="assets/images/man.jpeg" alt="">
-                    <h1>Micheal</h1>
+                    <div class="content-team">
+                        <h2>Micheal</h2>
                     <p>Mathematician , Statician</p>
+                    </div>
                 </div>
                 <!-- item 1 -->
                 <div class="items">
