--- a/index.html
+++ b/index.html
@@ -116,28 +116,23 @@
 
         <!-- About section ends here -->
 
-        <!-- Get Involved section starts here -->
-        <section id="get-involved">
-            <!-- image overlay text -->
-            <div class="container overlay-text" style="position: relative;">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img class="img-fluid d-none d-md-block" src="./assets/images/climate.png"
-                            alt="Climate Change Image">
-                    </div>
-                    <div class="col-md-6 overlay-text-content"
-                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('./assets/images/black-background.png'); background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; color: #fff;">
-                        <h2 class="title-white">Get Involved</h2>
-                        <p>"Join the movement towards a drought-resilient world - every donation plants the greener seeds of
-                            change, cultivating a greener, thriving future for all!"</p>
+      <section class="get-involved">
+        <div class="container overlay-text" style="position: relative;">
+            <div class="row">
+                <div class="col-md-6 order-md-2">
+                    <img class="img-fluid d-none d-md-block" src="./assets/images/Group 13.png" alt="Climate Change Image">
+                </div>
+                <div class="col-md-6 overlay-text-content order-md-1"
+                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('./assets/images/black-background.png'); background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; color: #fff;">
+                    <h2 class="title-white">Get Involved</h2>
+                    <p>"Join the movement towards a drought-resilient world - every donation plants the greener seeds of
+                        change, cultivating a greener, thriving future for all!"</p>
 
-                        <button>Donate Now</button>
-                    </div>
+                    <button>Donate Now</button>
                 </div>
             </div>
-            <!-- image overlay text ends here -->
-        </section>
-
+        </div>
+    </section>
         <!-- Get involved ends here -->
         <section id="posts">
             <div class="container">
