--- a/about.html
+++ b/about.html
@@ -1,131 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Maji Yetu Foundation</title>
-<link rel="stylesheet" href="assets/css/about.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Maji Yetu Foundation</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
 </head>
+
 <body>
 
 
-<section class="container">
-       <!-- Header Section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-               <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item pr-3">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item pr-3">
-                        <a class="nav-link active" href="#">About</a>
-                    </li>
-                    <li class="nav-item pr-3">
-                        <a class="nav-link active" href="#">Projects</a>
-                    </li>
-                    <li class="nav-item pr-3">
-                        <a class="nav-link active" href="#">Donate</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-       
+    <section class="container">
+        <!-- Header Section -->
+        <header>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid d-flex justify-content-between align-items-center">
+                    <a class="navbar-brand" href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contact.html">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./projects.html">Projects</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
 
         <!-- MAIN SECTION -->
         <main class="main-content">
-        <section class="main-1">
-        <h4>About Us: Cultivating Change,<br> Securing Tomorrow</h4>
-        </section>
+            <div class="container">
+                <div class="text-center mb-4">
+                    <h1 class="display">About Maji Yetu Foundation</h1>
+                </div>
+                <h4 class="mt-5">Cultivating Change,Securing Tomorrow</h4>
 
-
-        <section class="main-2">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt asperiores quam esse rerum sit dolore molestiae commodi ratione! Voluptate nostrum ratione ducimus error. Optio vero sed obcaecati sint. Commodi, 
-            tempore consectetur reiciendis optio corporis sint vel doloribus rem ipsum et at nobis veniam sunt omnis molestias ipsa soluta 
-            aspernatur, eveniet odit error.
-            Libero excepturi praesentium quaerat modi doloribus itaque 
-            totam sunt eos tempora quia commodi vel, recusandae dolores. Sint amet delectus quia minima.</p>
-        <img src="assets/images/water-splash-with-earth-planet-free-png.png" alt="Water">
-        </section>
-
-        <section class="main-3">
-        <img src="assets/images/half-earth.png" alt="">
-        <div class="content">
-        <h1>Our Vision</h1>
-
-        <p> officiis quidem suscipit a reiciendis tempora animi dicta temporibus sunt sapiente recusandae aliquid minima, totam corrupti consectetur debitis quaerat soluta illum repudiandae repellendus architecto?
-            Cum temporibus amet modi rerum? Pariatur eos quam tempore sunt voluptatibus quisquam dolor
-            exercitationem error? Dolore aperiam ducimus possimus excepturi aspernatur iure, 
-            , hic ex voluptate labore fugiat quis? Aut mollitia molestiae, perspiciatis numquam totam cum natus.</p>
-        </div>
-        </section>
-
-                <section class="main-4">
-                    <div class="content">
-                        <h1>Our Purpose</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo neque nulla facere praesentium temporibus at architecto possimus consectetur deleniti eos, minima odit sequi quasi modi vitae aut quas aliquam libero repellendus itaque unde laborum dolore. Eveniet repellendus, ad amet temporibus unde facere itaque obcaecati dignissimos provident sit quod ea est a. Eaque saepe voluptatibus quibusdam fuga molestiae commodi recusandae natus maxime, ipsam impedit? Hic sapiente, ea, modi ullam quidem quo dolorum quod, impedit molestias repellat quia a deserunt culpa voluptates non enim. Dignissimos reiciendis voluptatum quaerat consequatur facere consequuntur aut, quisquam, ipsa perspiciatis numquam omnis asperiores! Quaerat inventore perferendis blanditiis? Sint porro quia facere similique laudantium ut? Tempora pariatur debitis ipsum rem, distinctio praesentium a officiis quod illo voluptate minus delectus, beatae quis doloremque quae dolorem. Ullam possimus dolores expedita aut, at sequi quidem nulla modi unde id necessitatibus delectus deleniti, similique magni tenetur nemo sapiente reprehenderit provident impedit! Voluptatibus?</p>
+                <section class="row">
+                    <div class="col-md-8">
+                        <p>Maji Yetu Foundation is dedicated to developing and implementing innovative projects aimed at
+                            addressing water scarcity and promoting sustainable agriculture. Our primary goal is to
+                            ensure reliable access to clean water, enhance food security, and contribute to
+                            environmental sustainability. Through these initiatives, we aspire to make a lasting impact
+                            on society by improving livelihoods and empowering communities. Our vision is to create a
+                            world where every individual has access to clean water, bolstering food security and
+                            fostering environmental sustainability. By implementing efficient water transportation
+                            systems and promoting sustainable agricultural practices, Maji Yetu Foundation is committed
+                            to creating a more resilient and sustainable future for all, striving to make a positive
+                            difference in the lives of communities we serve.</p>
                     </div>
-                    <img src="assets/images/leaf.jpeg" alt="">
+                    <div class="col-md-4">
+                        <img class="img-fluid" src="assets/images/water-splash-with-earth-planet-free-png.png"
+                            alt="Water">
+                    </div>
                 </section>
+
+                <section class="row">
+                    <div class="col-md-4 d-none d-md-block ">
+                        <img class="img-fluid" src="assets/images/half-earth.png" alt="">
+                    </div>
+                    <div class="col-md-8 pt-5">
+                        <div class="">
+                            <h1>Our Vision</h1>
+                            <p> Our vision is to create a world where every individual has access to clean water,
+                                enhance food security, and contribute to environmental sustainability. By creating
+                                efficient water transportation systems and implementing sustainable agricultural
+                                practices, we aim to improve livelihoods and create a more resilient and sustainable
+                                future for all.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-block d-md-none">
+                        <img class="img-fluid" src="assets/images/half-earth.png" alt="">
+                    </div>
+                </section>
+
+                <section class="main-4 row">
+                    <div class="col-md-8">
+                        <div class="">
+                            <h1>Our Purpose</h1>
+                            <p>The purpose of Maji Yetu Foundation is to develop and implement innovative projects that
+                                address water scarcity and promote sustainable agriculture. We aim to provide reliable
+                                access to clean water, enhance food security, and contribute to environmental
+                                sustainability. Through our projects, we strive to improve livelihoods, empower
+                                communities, and create a positive impact on society</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="assets/images/leaf.jpeg" alt="">
+                    </div>
+                </section>
+            </div>
+
 
             <section class="team">
                 <div class="cards">
                     <div class="head">
-                    <h1>Meet Our Team: Visionaries Driving Change</h1>
-                </div>
-                <!-- item 1 -->
-                <div class="items">
-                    <img src="assets/images/lady.png" alt="">
-                    <div class="content-team">
-                    <h2>Grace Muthoni</h2>
-                    <p>Founder &amp;CEO , Cloud practitioner, <br>Data Scientist</p>
+                        <h1>Meet Our Team: Visionaries Driving Change</h1>
                     </div>
-                </div>
-                <!-- item 1 -->
-                <div class="items">
-                    <img src="assets/images/man.jpeg" alt="">
-                    <div class="content-team">
-                    <h2>Mulati Brian</h2>
-                    <p>Co-Founder Full stack developer,Cloud  <br>practitioner,Data analyst</p>
+                    <!-- item 1 -->
+                    <div class="items">
+                        <img src="assets/images/lady.png" alt="">
+                        <div class="content-team">
+                            <h2>Grace Muthoni</h2>
+                            <p>Founder &amp;CEO , Cloud practitioner, <br>Data Scientist</p>
+                        </div>
                     </div>
-                </div>
-                <!-- item 1 -->
-                <div class="items">
-                    <img src="assets/images/man.jpeg" alt="">
-                    <div class="content-team">
-                    <h2>Vicent</h2>
-                    <p>Mathematician,Statician</p>
+                    <!-- item 1 -->
+                    <div class="items">
+                        <img src="assets/images/man.jpeg" alt="">
+                        <div class="content-team">
+                            <h2>Mulati Brian</h2>
+                            <p>Co-Founder Full stack developer,Cloud <br>practitioner,Data analyst</p>
+                        </div>
                     </div>
-                </div>
-                <!-- item 1 -->
-                <div class="items">
-                    <img src="assets/images/man.jpeg" alt="">
-                    <div class="content-team">
-                        <h2>Tom Lee</h2>
-                    <p>IOT engineer,Cloud practitioner , Data <br> analyst</p>
+                    <!-- item 1 -->
+                    <div class="items">
+                        <img src="assets/images/man.jpeg" alt="">
+                        <div class="content-team">
+                            <h2>Vicent</h2>
+                            <p>Mathematician,Statician</p>
+                        </div>
                     </div>
-                </div>
-                <!-- item 1 -->
-                <div class="items">
-                    <img src="assets/images/man.jpeg" alt="">
-                    <div class="content-team">
-                        <h2>Micheal</h2>
-                    <p>Mathematician , Statician</p>
+                    <!-- item 1 -->
+                    <div class="items">
+                        <img src="assets/images/man.jpeg" alt="">
+                        <div class="content-team">
+                            <h2>Tom Lee</h2>
+                            <p>IOT engineer,Cloud practitioner , Data <br> analyst</p>
+                        </div>
                     </div>
-                </div>
-                <!-- item 1 -->
-                <div class="items">
-                    <img src="assets/images/planet-earth-falling-into-clear-water-free-png.png" alt="">
+                    <!-- item 1 -->
+                    <div class="items">
+                        <img src="assets/images/man.jpeg" alt="">
+                        <div class="content-team">
+                            <h2>Micheal</h2>
+                            <p>Mathematician , Statician</p>
+                        </div>
+                    </div>
+                    <!-- item 1 -->
+                    <div class="items">
+                        <img src="assets/images/planet-earth-falling-into-clear-water-free-png.png" alt="">
 
-                </div>
+                    </div>
                 </div>
             </section>
         </main>
@@ -133,21 +170,41 @@
 
         <!-- FOOTER SECTION -->
         <hr>
-        <section class="footer">
-                <footer class="content">
-                    <ul class="content">
-                        <li><i class="fas fa-envelope"></i> Email: email@majiyetu.co.ke</li>
-                        <li><i class="fab fa-facebook"></i> Facebook : Majiyetuofficial</li>
-                        <li><i class="fas fa-at"></i> X: majiyetu_official</li>
-                        <li><i class="fab fa-instagram"></i> Instagram Majiyetuofficial</li>
+
+        <!-- Footer section starts here -->
+        <section id="footer">
+            <div class="footer-text-left">
+                <div class="footer-socials pt-4">
+                    <ul>
+                        <li><b>Email</b></li>
+                        <li><b>Facebook</b></li>
+                        <li><b>X</b></li>
+                        <li> <b>Instagram</b></li>
+                    </ul>
+                </div>
+                <div class="footer-socials pt-4">
+                    <ul>
+                        <li>info@majiyetufoundation.org</li>
+                        <li>Majiyetuofficial</li>
+                        <li>majiyetu_official</li>
+                        <li>majiyetuoficial</li>
                     </ul>
 
-                        <div class="image-footer">
-                            <img src="assets/images/global-warming.png" alt="">
-                        </div>
-                </footer>
+                </div>
+
+                <div class="img-right">
+                    <img height="150px" class="rounded float-end" src="./assets/images/global-warming.png" alt="">
+                </div>
+            </div>
+            <div class="copy-right">
+                <h5>© 2024 Eco-Hydrate Foundation</h5>
+            </div>
         </section>
-</section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <!-- Footer section ends here -->
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
