--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="container-fluid d-flex justify-content-between align-items-center">
                     <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="Logo"></a>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
@@ -31,13 +31,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="./about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="./contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Projects</a>
+                                <a class="nav-link" href="./projects.html">Projects</a>
                             </li>
                         </ul>
                     </div>
@@ -52,6 +52,7 @@
         <section class="start">
             <div>
                 <h2>Where Water Flows <br> communities Grow!</h2>
+                <br>
                 <p> Welcome to Maji Yetu. where every drop counts in our mission against drought. <br>
                     We're the catalysts for change, sowing seeds of resilience and nurturing <br> a future
                     where water flows freely, fields flourish, and sustainability thrives. <br> Join us in this
@@ -60,13 +61,13 @@
         </section>
 
         <!-- Hero section starts here -->
-        <section id="hero">
+        <section id="hero mt-5">
             <div class=" container socials row mx-4">
                 <ul class="hero-socials">
-                    <li> <button class="button-join">Join the Movement</button></li>
-                    <li><img class="icon" src="/assets/images/facebook.png" alt=""></li>
-                    <li><img class="icon" src="/assets/images/twitter.png" alt=""></li>
-                    <li> <img class="icon" src="/assets/images/istagram.png" alt=""></li>
+                    <li> <button class="button-join d-none d-sm-block">Join the Movement</button></li>
+                    <li><a href="http://facebook.com"><img class="icon" src="/assets/images/facebook.png" alt=""></a></li>
+                    <li><a href="http://x.com"><img class="icon" src="/assets/images/twitter.png" alt=""></a></li>
+                    <li><a href="http://instagram.com"><img class="icon" src="/assets/images/istagram.png" alt=""></a></li>
                 </ul>
             </div>
         </section>
@@ -117,28 +118,25 @@
         <!-- About section ends here -->
 
         <!-- Get involved starts here -->
-        <section class="get-involved">
-            <div class="container">
+        <section id="get-involved">
+            <!-- image overlay text -->
+            <div class="container overlay-text" style="position: relative;">
                 <div class="row">
-                    <div class="col-md-6 offset-md-6">
-                        <div class="overlay-text" style="position: relative;">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <img class="img-fluid d-none d-md-block" src="./assets/images/Group 13.png" alt="Climate Change Image">
-                                    <div class="overlay-text-content"
-                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('./assets/images/black-background.png'); background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; color: #fff;">
-                                        <h2 class="title-white">Get Involved</h2>
-                                        <p>"Join the movement towards a drought-resilient world - every donation plants the greener seeds of
-                                            change, cultivating a greener, thriving future for all!"</p>
-        
-                                        <button>Donate Now</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-md-12">
+                        <img class="img-fluid d-none d-md-block" src="./assets/images/Group 13.png"
+                            alt="Climate Change Image" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="col-md-6 "
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('./assets/images/black-background.png'); background-size: cover; background-position: center; display: flex; flex-direction: column; justify-content: center; align-items: center; color: #fff;">
+                        <h2 class="title-white">Get Involved</h2>
+                        <p>"Join the movement towards a drought-resilient world - every donation plants the greener seeds of
+                            change, cultivating a greener, thriving future for all!"</p>
+
+                        <button class="button-join">Donate Now</button>
                     </div>
                 </div>
             </div>
+            <!-- image overlay text ends here -->
         </section>
 
         <!-- Get involved ends here -->
@@ -166,18 +164,17 @@
                 </div>
             </div>
         </section>
-
         <!-- subscribe section -->
         <section id="subscribe">
             <div class="container pb-5">
-                <form class="form">
+                <form class="form" onsubmit="subscribe()">
                     <div class="text-center">
                         <span class="title">Subscribe to our newsletter.</span>
                         <div class="text"></div>
                     </div>
                     <div>
                         <input placeholder="Enter your email" type="email" name="email" id="email-address">
-                        <button type="submit">Subscribe</button>
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#subscribeModal">Subscribe</button>
                     </div>
                 </form>
             </div>
@@ -210,12 +207,13 @@
                 </div>
             </div>
             <div class="copy-right">
-                <h5>© 2024 MajiYetu Foundation</h5>
+                <h5>© 2024 Eco-Hydrate Foundation</h5>
             </div>
         </section>
         <!-- Footer section ends here -->
 
     </div>
+   
 
     <!-- Include Bootstrap JavaScript and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-q3s2z4G6vPYF8DTTlOIhP2bu/p5N8/9Q1HhKPOb6LZlXrwwQ+lpuuHQaQfaTdJ2t" crossorigin="anonymous"></script>
